[package]
name = "imnodes"
version = "0.1.0"
edition = "2018"
authors = ["Benedikt Mandelkow", "imnodes-rs contributors"]
description = "Rust bindings to https://github.com/Nelarius/imnodes"
license = "MIT/Apache-2.0"
categories = ["gui", "api-bindings"]
readme = "README.md"

[dependencies]
imnodes-sys = { version = "0.1.0", path = "imnodes-sys" }
imgui = "0.7"

[features]
# export all low level functions
include_low_level_bindings = []

[workspace]
members = [
    "imnodes-sys",
    "imnodes-wgpu-examples",
    "imnodes-sys-bindgen",
]

[patch.crates-io]
imgui = { git = "https://github.com/imgui-rs/imgui-rs/", rev = "794ece895673a94fe480e1d81587108f34c8f586" }
imgui-sys = { git = "https://github.com/imgui-rs/imgui-rs/", rev = "794ece895673a94fe480e1d81587108f34c8f586" }
