[package]
name = "imnodes-sys"
version = "0.2.2"
edition = "2021"
authors = ["Benedikt Mandelkow", "imnodes-rs contributors"]
description = "Raw FFI bindings to imnodes"
license = "MIT/Apache-2.0"
categories = ["gui", "external-ffi-bindings"]
build = "build.rs"
links = "imnodes"

[dependencies]
imgui-sys = "0.11.0"

[build-dependencies]
cc = "1.0.83"
