[package]
name = "imnodes-wgpu-examples"
version = "0.3.0"
authors = [
    "Benedikt Mandelkow <benedikt.mandelkow@rwth-aachen.de>",
    "imgui-wgpu contributors",
]
edition = "2021"

[dependencies]
imnodes = { path = "../" }

wgpu = "0.19"
winit = "0.29.3"
futures = "0.3.31"
imgui = "0.12"
imgui-winit-support = "0.12"
imgui-wgpu = { git = "https://github.com/Yatekii/imgui-wgpu-rs", rev = "914cbf5bd3b2492e6243dd1ebe88e377f5c78e91" }
