[package]
name = "imnodes-wgpu-examples"
version = "0.4.0"
authors = [
    "Benedikt Mandelkow <benedikt.mandelkow@rwth-aachen.de>",
    "imgui-wgpu contributors",
]
edition = "2021"

[dependencies]
imnodes = { path = "../" }

wgpu = "23.0"
winit = "0.30"
futures = "0.3.31"
imgui = "0.12"
imgui-winit-support = "0.13"
imgui-wgpu = { git = "https://github.com/Yatekii/imgui-wgpu-rs", rev = "bab0725a921afeab2066380c9e60b0f1bb011672" }
