[package]
name = "imnodes-wgpu-examples"
version = "0.5.0"
authors = [
    "Benedikt Mandelkow <benedikt.mandelkow@rwth-aachen.de>",
    "imgui-wgpu contributors",
]
edition = "2024"

[dependencies]
imnodes = { path = "../" }

wgpu = "25.0.0"
winit = "0.30"
futures = "0.3.31"
imgui = "0.12"
imgui-winit-support = "0.13"
imgui-wgpu = "0.25"
